[ci skip] Tweak Lorenz curve 37899cca599104791fc2bf00b2683c7cf8bad4e4

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "34dbc9c2",
+   "id": "e54ff505",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc0a17d",
+   "id": "250e74db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a0d7fd8",
+   "id": "d8110e8d",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c97d645f",
+   "id": "9003aec5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd39010e",
+   "id": "a1a36f45",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56cdedd",
+   "id": "b4e29d6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d5f06f",
+   "id": "4164ef0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f66de628",
+   "id": "2392eb90",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0935637",
+   "id": "ec2e68eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "201017b1",
+   "id": "d790efc1",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36a04abe",
+   "id": "9b1bd38c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd72ffa1",
+   "id": "9f410614",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b95f180c",
+   "id": "38e469b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30417663",
+   "id": "9d069113",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52bcc4f",
+   "id": "e7ba0f20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef85c7bc",
+   "id": "5e87ed46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58aa36e6",
+   "id": "27bfbf6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e93bec",
+   "id": "ed9b4e8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05b67c6",
+   "id": "6108260c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef71c21c",
+   "id": "d9d72719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4789803",
+   "id": "8d04e3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c460181f",
+   "id": "2b812bce",
    "metadata": {},
    "source": [
     "\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9939ea9",
+   "id": "047bb441",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f71dbf0",
+   "id": "f8cff67d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11e5794a",
+   "id": "2c44896e",
    "metadata": {},
    "source": [
     "\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39fa2b2f",
+   "id": "dab51837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ddb8238",
+   "id": "d2d616cd",
    "metadata": {},
    "source": [
     "\n",
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d49838",
+   "id": "247f2a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8614033e",
+   "id": "397b1015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d60b944",
+   "id": "45cad13c",
    "metadata": {},
    "source": [
     "\n",
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c7f676",
+   "id": "1913e15a",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "253c2519",
+   "id": "493b6a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61636c23",
+   "id": "1e73f938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a709f9d1",
+   "id": "22d316ed",
    "metadata": {},
    "source": [
     "\n",
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3934fc69",
+   "id": "379a7e59",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a57e13d",
+   "id": "dee37706",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6a7205",
+   "id": "a24b7989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f44a748c",
+   "id": "5af58940",
    "metadata": {},
    "source": [
     "\n",
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c9f7d9",
+   "id": "7eea2688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4495b6fa",
+   "id": "91ce25c9",
    "metadata": {},
    "source": [
     "\n",
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46e713f6",
+   "id": "2545f0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6a7fa79",
+   "id": "400f7e8e",
    "metadata": {},
    "source": [
     "\n",
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07289a7f",
+   "id": "82b28548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e165a3",
+   "id": "145fedf5",
    "metadata": {},
    "source": [
     "\n",
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae451835",
+   "id": "035e2816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31406332",
+   "id": "eed573df",
    "metadata": {},
    "source": [
     "\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a651319f",
+   "id": "a2cc0293",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52dda82f",
+   "id": "d943f119",
    "metadata": {},
    "source": [
     "\n",
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "045eefe7",
+   "id": "4e6e158e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b39886",
+   "id": "49e67e6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f930e55",
+   "id": "55c0745f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4030debf",
+   "id": "4b422ad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05c3a34b",
+   "id": "d3908eec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
     "                n_samples=n_samples,\n",
     "            ).with_columns(\n",
     "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
-    "                pl.lit(\"model\").alias(\"model\"),\n",
+    "                pl.lit(\"Model\").alias(\"model\"),\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1168,7 +1168,7 @@
     "                n_samples=n_samples,\n",
     "            ).with_columns(\n",
     "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
-    "                pl.lit(\"oracle\").alias(\"model\"),\n",
+    "                pl.lit(\"Oracle\").alias(\"model\"),\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1188,7 +1188,7 @@
     "    )\n",
     "\n",
     "    results = results.join(gini_stats, on=\"model\").with_columns(\n",
-    "        pl.format(\"{} ({} +/- {})\", \"model\", \"gini_mean\", \"gini_std_dev\").alias(\n",
+    "        pl.format(\"{} (Gini: {} +/- {})\", \"model\", \"gini_mean\", \"gini_std_dev\").alias(\n",
     "            \"model_label\"\n",
     "        )\n",
     "    )\n",
@@ -1215,7 +1215,7 @@
     "                {\n",
     "                    \"cum_population\": [0, 1],\n",
     "                    \"cum_observed\": [0, 1],\n",
-    "                    \"model_label\": \"Non-informative model\",\n",
+    "                    \"model_label\": \"Non-informative model (Gini = 0.0)\",\n",
     "                }\n",
     "            )\n",
     "        )\n",
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2f3bc72",
+   "id": "c41ed5fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d394e2d7",
+   "id": "a7045cd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c552cf",
+   "id": "887fd32a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f951b51",
+   "id": "27655b94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8388ef01",
+   "id": "a749331e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "609b21a9",
+   "id": "af0e93b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28bab83",
+   "id": "f0c2b3da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9243038b",
+   "id": "3efe1cc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e689bb18",
+   "id": "be37897b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc65de1d",
+   "id": "fe9cae78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d44202e",
+   "id": "585697be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20d86557",
+   "id": "06862d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc683d68",
+   "id": "f4cefff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05cba08e",
+   "id": "12a84d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cab5d37",
+   "id": "cea6003f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e34e5e9",
+   "id": "f2a35427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c10abd",
+   "id": "2f1396bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c444628",
+   "id": "0e0136fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30135660",
+   "id": "2775accf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dca6cafc",
+   "id": "eeec70cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68a3fd6d",
+   "id": "ce302ee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d2636cf",
+   "id": "ef7fbe4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61b5d86",
+   "id": "e4b80a54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c7aeecc",
+   "id": "7e88928a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f912a806",
+   "id": "93868fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a55feb5",
+   "id": "2f5332de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83901710",
+   "id": "32a7a885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2018,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec967fc9",
+   "id": "d475548d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c83e3c",
+   "id": "0244ebae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d193ea2c",
+   "id": "41905877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a5f536",
+   "id": "8d271965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba4d2590",
+   "id": "916b5846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b6aed1",
+   "id": "3c2fdcfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4cd929c",
+   "id": "032bf6fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e1ea98",
+   "id": "f22d080b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ea8ebd",
+   "id": "10255d5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bad4e08",
+   "id": "64e8b2e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bf6421f",
+   "id": "dc695932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "780788f3",
+   "id": "45ce6202",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2232,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b7f422e",
+   "id": "6d45e242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0151364",
+   "id": "e564dfc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c3c5e41",
+   "id": "32929154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f807b17",
+   "id": "9cf6d1a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3406be8",
+   "id": "bd9b65fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e8b22e7",
+   "id": "59c2adc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2376,7 +2376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fd96826",
+   "id": "ab50db43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b01e6d0",
+   "id": "22024de1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e8b4a47",
+   "id": "74ac8820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,7 +2429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbffab0f",
+   "id": "c45d4805",
    "metadata": {},
    "outputs": [],
    "source": []
