--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea2dbc95",
+   "id": "2794d778",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6de3a46e",
+   "id": "7c698ebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cb0d619",
+   "id": "578287ba",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ca06e0",
+   "id": "592e5237",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42936091",
+   "id": "6653975e",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62e5324",
+   "id": "dd71fdf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6faa2070",
+   "id": "2c763dcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f068d9",
+   "id": "e477bb90",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b970bc09",
+   "id": "7b320542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6603e663",
+   "id": "ab1702c6",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc38f3f7",
+   "id": "e9858970",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4880745",
+   "id": "59edf87b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d294ca7",
+   "id": "248cab5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "429d885d",
+   "id": "1e44e8f0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20737d72",
+   "id": "cd1f2075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b32e1e",
+   "id": "ba25c753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f17ac0ab",
+   "id": "3c27e89c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2605fb00",
+   "id": "fbb1f8c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73c4b7f",
+   "id": "024ac378",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ee44b13",
+   "id": "115b3ea2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ade189",
+   "id": "b3738b3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2236b865",
+   "id": "c06c7c06",
    "metadata": {},
    "source": [
     "\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33ed4536",
+   "id": "8f19bf53",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c83f3ea8",
+   "id": "94102f1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4014c586",
+   "id": "d6510937",
    "metadata": {},
    "source": [
     "\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dd69a0d",
+   "id": "e8172e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b707009",
+   "id": "168f63a6",
    "metadata": {},
    "source": [
     "\n",
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ed7563",
+   "id": "e5258bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e09c86",
+   "id": "b65bafd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc901d5",
+   "id": "ace8c507",
    "metadata": {},
    "source": [
     "\n",
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a0d931",
+   "id": "c8fcc805",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98ef23cf",
+   "id": "ddd69e5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55dd92d8",
+   "id": "9591791d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f7d99f0",
+   "id": "92bf1f10",
    "metadata": {},
    "source": [
     "\n",
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9cbde08",
+   "id": "2fd854be",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7849c88",
+   "id": "38eada08",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c025f0b",
+   "id": "1cf5c9c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c72564c1",
+   "id": "14d7dc26",
    "metadata": {},
    "source": [
     "\n",
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79146618",
+   "id": "882f9780",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c86c268",
+   "id": "70ea56f7",
    "metadata": {},
    "source": [
     "\n",
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0a183d",
+   "id": "12d9bca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577de840",
+   "id": "be0ca7cc",
    "metadata": {},
    "source": [
     "\n",
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b2714a4",
+   "id": "266e65c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b1489f",
+   "id": "606c0486",
    "metadata": {},
    "source": [
     "\n",
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb32545",
+   "id": "06a4eb91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0fdda28",
+   "id": "014c449d",
    "metadata": {},
    "source": [
     "\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b708193",
+   "id": "e434ccc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611d080a",
+   "id": "c16f438b",
    "metadata": {},
    "source": [
     "\n",
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aa0ba1a",
+   "id": "defc75f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a5dde22",
+   "id": "26c40c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dab87c62",
+   "id": "9632cfb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b81ca7",
+   "id": "fd6fd92f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5a94ef4",
+   "id": "c2064153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
     "                n_samples=n_samples,\n",
     "            ).with_columns(\n",
     "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
-    "                pl.lit(\"model\").alias(\"model\"),\n",
+    "                pl.lit(\"Model\").alias(\"model\"),\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1168,7 +1168,7 @@
     "                n_samples=n_samples,\n",
     "            ).with_columns(\n",
     "                pl.lit(cv_idx).alias(\"cv_idx\"),\n",
-    "                pl.lit(\"oracle\").alias(\"model\"),\n",
+    "                pl.lit(\"Oracle\").alias(\"model\"),\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -1188,7 +1188,7 @@
     "    )\n",
     "\n",
     "    results = results.join(gini_stats, on=\"model\").with_columns(\n",
-    "        pl.format(\"{} ({} +/- {})\", \"model\", \"gini_mean\", \"gini_std_dev\").alias(\n",
+    "        pl.format(\"{} (Gini: {} +/- {})\", \"model\", \"gini_mean\", \"gini_std_dev\").alias(\n",
     "            \"model_label\"\n",
     "        )\n",
     "    )\n",
@@ -1215,7 +1215,7 @@
     "                {\n",
     "                    \"cum_population\": [0, 1],\n",
     "                    \"cum_observed\": [0, 1],\n",
-    "                    \"model_label\": \"Non-informative model\",\n",
+    "                    \"model_label\": \"Non-informative model (Gini = 0.0)\",\n",
     "                }\n",
     "            )\n",
     "        )\n",
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "726f4186",
+   "id": "7db61b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df003a45",
+   "id": "2d2d7000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0d35aa",
+   "id": "15a6f851",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9e6db93",
+   "id": "89822b63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59578c6",
+   "id": "11d592b7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d615b9e",
+   "id": "263f330d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ccf3ad7",
+   "id": "02ebb944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fc89357",
+   "id": "462f2ed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3da37d6",
+   "id": "62d5231a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d727ff6",
+   "id": "a309982e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc3eafcf",
+   "id": "90caa79c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7def581f",
+   "id": "10c70f09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e4c796f",
+   "id": "a9945f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e02dc3b5",
+   "id": "934d31c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "997b2a11",
+   "id": "0aeeda59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c95424",
+   "id": "310f0a80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "501a3eea",
+   "id": "5cd69382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02192472",
+   "id": "7b8bad00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa4ad633",
+   "id": "1003f2c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91645528",
+   "id": "efdbedf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56761af0",
+   "id": "ae244e5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "405ab2c7",
+   "id": "9e7bdc56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f55b5956",
+   "id": "cf020fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d62a105",
+   "id": "a42c0a72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b7de770",
+   "id": "ad93e0b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ee56c97",
+   "id": "ac74a497",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee99b173",
+   "id": "346113de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2018,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d281e573",
+   "id": "d5504e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbc4574b",
+   "id": "f3197931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f708b23",
+   "id": "f40744dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f58eae",
+   "id": "f6a6ce82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e7cd682",
+   "id": "b1c6ff8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "591299ab",
+   "id": "10d467da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed4811b1",
+   "id": "d5c50f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8600bb6c",
+   "id": "b54d111a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f71034",
+   "id": "c948dc0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d624e1c0",
+   "id": "4a7a2193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a397bd",
+   "id": "a2ff7ebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09dc3e84",
+   "id": "9b7d7756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2232,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1866641f",
+   "id": "7bf54675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ef9a30",
+   "id": "ee0fb432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca1653c7",
+   "id": "8000f528",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a254b65f",
+   "id": "a55e3988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58e77d10",
+   "id": "7ab907f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54d8d63",
+   "id": "571bed73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2376,7 +2376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "381f1635",
+   "id": "2413cf17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd5ad77",
+   "id": "d95966f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1d8c2b5",
+   "id": "b76d743b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,7 +2429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62940d5d",
+   "id": "56cd19ff",
    "metadata": {},
    "outputs": [],
    "source": []
