--- a/jupyterlite/files/notebooks/tutorial_helpers.ipynb
+++ b/jupyterlite/files/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d701e06f",
+   "id": "f3b9d90b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0daa6d64",
+   "id": "71fb945c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import polars as pl\n",
+    "import polars.selectors as cs\n",
     "import altair\n",
     "import skrub"
    ]
@@ -26,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4cce4fa",
+   "id": "6013688e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +94,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed7de15b",
+   "id": "f9c3cfa9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_lorenz_curve(cv_predictions, n_samples=1_000):\n",
+    "def plot_lorenz_curve(cv_predictions, n_samples=500):\n",
     "    \"\"\"Plot the Lorenz curve for a given cross-validation results containing\n",
     "    observed and predicted values.\n",
     "\n",
@@ -106,7 +107,7 @@
     "    cv_predictions : list of polars.DataFrame\n",
     "        A list of polars DataFrames, each containing the observed and predicted values\n",
     "        for a given fold. It is the output of the `collect_cv_predictions` function.\n",
-    "    n_samples : int, default=1_000\n",
+    "    n_samples : int, default=500\n",
     "        The number of samples to use to compute the Lorenz curve.\n",
     "\n",
     "    Returns\n",
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c4b7e5",
+   "id": "a3010b37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112f8ad3",
+   "id": "71feac4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,8 +407,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "286b1cb0",
-   "metadata": {},
+   "id": "f52dda28",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def plot_binned_residuals(cv_predictions, by=\"hour\"):\n",
@@ -539,10 +542,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d45485",
+   "id": "f5ce8534",
    "metadata": {},
    "outputs": [],
    "source": [
+    "@skrub.deferred\n",
     "def plot_horizon_forecast(\n",
     "    targets,\n",
     "    named_predictions,\n",
@@ -570,25 +574,23 @@
     "    altair.Chart\n",
     "        A chart with the true target and the forecast values for different horizons.\n",
     "    \"\"\"\n",
-    "    merged_data = targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.concat(\n",
-    "        [named_predictions], axis=1\n",
+    "    merged_data = pl.concat(\n",
+    "        [targets.select(pl.col(\"prediction_time\"), pl.col(\"load_mw\")), named_predictions],\n",
+    "        how=\"horizontal\",\n",
     "    )\n",
     "    start_time = plot_at_time - historical_timedelta\n",
     "    end_time = plot_at_time + datetime.timedelta(\n",
-    "        hours=named_predictions.skb.eval().shape[1]\n",
+    "        hours=named_predictions.shape[1]\n",
     "    )\n",
     "    true_values_past = merged_data.filter(\n",
     "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
     "    ).rename({\"load_mw\": \"Past true load\"})\n",
     "    true_values_future = merged_data.filter(\n",
-    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
+    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"right\")\n",
     "    ).rename({\"load_mw\": \"Future true load\"})\n",
     "    predicted_record = (\n",
-    "        merged_data.skb.select(\n",
-    "            cols=skrub.selectors.filter_names(str.startswith, \"predict\")\n",
-    "        )\n",
+    "        merged_data.select(cs.starts_with(\"predict\"))\n",
     "        .row(by_predicate=pl.col(\"prediction_time\") == plot_at_time, named=True)\n",
-    "        .skb.eval()\n",
     "    )\n",
     "    forecast_values = pl.DataFrame(\n",
     "        {\n",
@@ -600,15 +602,14 @@
     "        }\n",
     "        for horizon in range(1, len(predicted_record))\n",
     "    )\n",
-    "\n",
     "    true_values_past_chart = (\n",
-    "        altair.Chart(true_values_past.skb.eval())\n",
+    "        altair.Chart(true_values_past)\n",
     "        .transform_fold([\"Past true load\"])\n",
     "        .mark_line(tooltip=True)\n",
     "        .encode(x=\"prediction_time:T\", y=\"Past true load:Q\", color=\"key:N\")\n",
     "    )\n",
     "    true_values_future_chart = (\n",
-    "        altair.Chart(true_values_future.skb.eval())\n",
+    "        altair.Chart(true_values_future)\n",
     "        .transform_fold([\"Future true load\"])\n",
     "        .mark_line(tooltip=True)\n",
     "        .encode(x=\"prediction_time:T\", y=\"Future true load:Q\", color=\"key:N\")\n",
